2008-01-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --no-conf and --conf-path command-line option.
	--no-conf option disables loading aria2.conf file.
	--conf-path option changes the configuration file path. The default
	file path is $HOME/.aria2/aria2.conf
	Added a warning message when the configuration file is not found.
	* src/HelpItemFactory.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/usage_text.h

2008-01-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the message to inform users that other help categories are
	available in -h option.
	* src/version_usage.cc
	* src/TagContainer.{h, cc}
	* test/TagContainerTest.cc
	* src/TaggedItem.{h, cc}
	* test/TaggedItemTest.cc
	* src/HelpItem.h

2008-01-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added Piece::getFirstMissingBlockIndexWithoutLock() and it is called
	from PiecedSegment's ctor.
	Previously Piece::getAllMissingBlockIndexes() is called from
	PiecedSegment() but it is rather expensive since only first element is
	used.
	* src/PiecedSegment.cc
	* src/Piece.{h, cc}

2008-01-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Rewritten get*Missing*Index functions. Now no need to allocate memory
	each time these functions are called.
	* src/BitfieldMan.{h, cc}
	* test/BitfieldManTest.cc
	* src/array_fun.h
	* test/array_funTest.cc 

	Now BitfieldMan::countBlock() returns BitfieldMan::blocks.
	Added new BitfieldMan::countFilteredBlock() to get the number of blocks
	filtered. Removed unnecessary cast to int32_t.
	* src/BitfieldMan.{h, cc}
	
2008-01-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that EX_TOO_LONG_PAYLOAD exception is thrown if just
	payload length(4bytes) are received. This happens because lenbufLength
	is not updated in this particular case and successive call of
	receiveMessage() overwrites payload length with bytes recieved which
	are payload body.
	* src/PeerConnection.{h, cc}
	* src/message.h
