@@ -1,3 +1,11 @@
+2008-01-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Set default domain and default path to cookie.
+	* src/HttpResponse.cc
+	* src/CookieBox.{h, cc}
+	* src/CookieParser.{h, cc}
+	* test/CookieParserTest.cc
+
 2008-01-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Added --no-conf and --conf-path command-line option.
